# group_1_coverage

./: README.md
coverage_wss/: source_all.bash
coverage_wss/coverage_ws/src/path_following/: CMakeLists.txt  package.xml
coverage_wss/coverage_ws/src/path_following_msgs/: CMakeLists.txt  package.xml
coverage_wss/coverage_ws/src/path_tracer/: CMakeLists.txt  package.xml
coverage_wss/coverage_ws/src/point_cloud_filter/: CMakeLists.txt  (+1 more)
coverage_wss/coverage_ws/src/vrep_ugv_simulation/: package.xml
coverage_wss/coverage_ws/src/vrep_ugv_simulation/data/: multi_robot_empty_world.ttt  multi_robot_empty_world2.ttt  multi_robot_empty_world3.ttt  uav_test.ttt  uav_test2.ttt
coverage_wss/coverage_ws/src/vrep_ugv_simulation/launch/: vrep_multi_ugv.launch  vrep_uav_simulation.launch  vrep_uav_urdf.launch  vrep_ugv.launch  vrep_ugv_simulation.launch  vrep_ugv_teleop_joy.launch  vrep_ugv_teleop_keyboard.launch
coverage_wss/coverage_ws/src/vrep_ugv_simulation/robot_model/uav/: body.stl  front_left_propeller.stl  front_left_ring.stl  front_right_propeller.stl  front_right_ring.stl  rear_left_propeller.stl  rear_left_ring.stl  rear_right_propeller.stl  rear_right_ring.stl  uav.urdf
coverage_wss/coverage_ws/src/vrep_ugv_simulation/robot_model/ugv/: display.launch  load.launch  nifti_robot.urdf
coverage_wss/coverage_ws/src/vrep_ugv_simulation/rviz/: multi_robots.rviz  uav.rviz
coverage_wss/coverage_ws/src/vrep_ugv_simulation/scripts/: vrep_ugv_simulation  vrep_ugv_simulation~
coverage_wss/vrep_ros_interface/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
(+453 files in other folders)
